--- a/src/elements/content.scss
+++ b/src/elements/content.scss
@@ -1,12 +1,12 @@
 $content-margin: 1.5rem !default;
 $content-color: $body-color !default;
-$content-line-height: config('leading.loose') !default;
+$content-line-height: theme('lineHeight.loose') !default;
 
 $content-img-border-radius: 0 !default;
 
 $content-table-padding: 0.5rem 0.75rem !default;
-$content-table-border-color: config('colors.grey') !default;
-$content-table-heading-font-weight: config('fontWeights.semibold') !default;
+$content-table-border-color: theme('colors.grey') !default;
+$content-table-heading-font-weight: theme('fontWeight.semibold') !default;
 
 .content {
     overflow: auto;
