--- a/src/elements/content.scss
+++ b/src/elements/content.scss
@@ -5,7 +5,7 @@ $content-line-height: theme('lineHeight.loose') !default;
 $content-img-border-radius: 0 !default;
 
 $content-table-padding: 0.5rem 0.75rem !default;
-$content-table-border-color: theme('colors.grey') !default;
+$content-table-border-color: theme('colors.grey.500') !default;
 $content-table-heading-font-weight: theme('fontWeight.semibold') !default;
 
 .content {
