--- a/src/components/dropdown.scss
+++ b/src/components/dropdown.scss
@@ -1,6 +1,6 @@
 $dropdown-padding: 0.5rem 0 !default;
 $dropdown-font-size: theme('fontSize.sm') !default;
-$dropdown-border-color: theme('colors.grey-light') !default;
+$dropdown-border-color: theme('colors.grey.400') !default;
 $dropdown-border-radius: theme('borderRadius.default') !default;
 $dropdown-background-color: theme('colors.white') !default;
 
@@ -14,10 +14,10 @@ $dropdown-item-padding: 0.3rem 1rem !default;
 $dropdown-item-line-height: theme('lineHeight.normal') !default;
 
 $dropdown-item-hover-color: theme('colors.black') !default;
-$dropdown-item-hover-background-color: theme('colors.grey-lighter') !default;
+$dropdown-item-hover-background-color: theme('colors.grey.300') !default;
 
 $dropdown-item-active-color: theme('colors.white') !default;
-$dropdown-item-active-background-color: theme('colors.blue') !default;
+$dropdown-item-active-background-color: theme('colors.blue.500') !default;
 
 .dropdown {
     position: relative;
