--- a/src/elements/form.scss
+++ b/src/elements/form.scss
@@ -1,70 +1,70 @@
 $input-padding: 0.5rem 0.75rem !default;
 $input-border-radius: theme('borderRadius.default') !default;
 
-$input-color: theme('colors.grey-darker') !default;
-$input-hover-color: theme('colors.grey-darkest') !default;
-$input-disabled-color: theme('colors.grey-light') !default;
+$input-color: theme('colors.grey.600') !default;
+$input-hover-color: theme('colors.grey.700') !default;
+$input-disabled-color: theme('colors.grey.400') !default;
 
-$input-placeholder-color: theme('colors.grey') !default;
-$input-hover-placeholder-color: theme('colors.grey-dark') !default;
-$input-disabled-placeholder-color: theme('colors.grey') !default;
+$input-placeholder-color: theme('colors.grey.500') !default;
+$input-hover-placeholder-color: theme('colors.grey.600') !default;
+$input-disabled-placeholder-color: theme('colors.grey.500') !default;
 
-$input-border-color: theme('colors.grey-light') !default;
-$input-hover-border-color: theme('colors.grey') !default;
-$input-active-border-color: theme('colors.grey-light') !default;
-$input-disabled-border-color: theme('colors.grey-light') !default;
+$input-border-color: theme('colors.grey.400') !default;
+$input-hover-border-color: theme('colors.grey.500') !default;
+$input-active-border-color: theme('colors.grey.400') !default;
+$input-disabled-border-color: theme('colors.grey.400') !default;
 
 $input-background-color: theme('colors.white') !default;
 $input-hover-background-color: theme('colors.white') !default;
-$input-disabled-background-color: theme('colors.grey-lighter') !default;
+$input-disabled-background-color: theme('colors.grey.300') !default;
 
-$select-arrow-color: theme('colors.grey') !default;
-$select-hover-arrow-color: theme('colors.grey-dark') !default;
-$select-disabled-arrow-color: theme('colors.grey-light') !default;
+$select-arrow-color: theme('colors.grey.500') !default;
+$select-hover-arrow-color: theme('colors.grey.600') !default;
+$select-disabled-arrow-color: theme('colors.grey.400') !default;
 
 $checkbox-top: 0.25rem !default;
 $checkbox-radius: theme('borderRadius.default') !default;
 
-$checkbox-border-color: theme('colors.grey-light') !default;
+$checkbox-border-color: theme('colors.grey.400') !default;
 $checkbox-background-color: transparent !default;
 
-$checkbox-hover-border-color: theme('colors.grey') !default;
+$checkbox-hover-border-color: theme('colors.grey.500') !default;
 $checkbox-hover-background-color: transparent !default;
 
-$checkbox-focus-border-color: theme('colors.grey-dark') !default;
+$checkbox-focus-border-color: theme('colors.grey.600') !default;
 $checkbox-focus-background-color: transparent !default;
 
-$checkbox-checked-color: theme('colors.blue') !default;
-$checkbox-checked-border-color: theme('colors.grey') !default;
+$checkbox-checked-color: theme('colors.blue.500') !default;
+$checkbox-checked-border-color: theme('colors.grey.500') !default;
 $checkbox-checked-background-color: transparent !default;
 
-$checkbox-checked-hover-color: theme('colors.blue-dark') !default;
-$checkbox-checked-hover-border-color: theme('colors.grey-dark') !default;
+$checkbox-checked-hover-color: theme('colors.blue.600') !default;
+$checkbox-checked-hover-border-color: theme('colors.grey.600') !default;
 $checkbox-checked-hover-background-color: transparent !default;
 
-$checkbox-checked-focus-color: theme('colors.blue-dark') !default;
+$checkbox-checked-focus-color: theme('colors.blue.600') !default;
 
-$radio-border-color: theme('colors.grey-light') !default;
+$radio-border-color: theme('colors.grey.400') !default;
 $radio-background-color: transparent !default;
 
-$radio-hover-border-color: theme('colors.grey') !default;
+$radio-hover-border-color: theme('colors.grey.500') !default;
 $radio-hover-background-color: transparent !default;
 
-$radio-focus-border-color: theme('colors.grey-dark') !default;
+$radio-focus-border-color: theme('colors.grey.600') !default;
 $radio-focus-background-color: transparent !default;
 
-$radio-checked-color: theme('colors.blue') !default;
-$radio-checked-hover-color: theme('colors.blue-dark') !default;
-$radio-checked-focus-color: theme('colors.blue-dark') !default;
+$radio-checked-color: theme('colors.blue.500') !default;
+$radio-checked-hover-color: theme('colors.blue.600') !default;
+$radio-checked-focus-color: theme('colors.blue.600') !default;
 
 $label-font-size: $body-font-size !default;
 $label-margin: theme('margin.2') !default;
 $label-color: theme('colors.black') !default;
-$label-asterisk-color: theme('colors.red') !default;
+$label-asterisk-color: theme('colors.red.500') !default;
 $label-font-weight: theme('fontWeight.semibold') !default;
 
 $help-font-size: theme('fontSize.xs') !default;
-$help-color: theme('colors.grey') !default;
+$help-color: theme('colors.grey.500') !default;
 
 $field-margin: theme('margin.2') !default;
 
